<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_my_habitat"
            android:icon="@drawable/ic_menu_habitat"
            android:title="@string/my_habitat" />
        <item
            android:id="@+id/nav_all_habitats"
            android:icon="@drawable/ic_menu_habitat"
            android:title="@string/all_habitats" />
        <item
            android:id="@+id/nav_my_devices"
            android:icon="@drawable/ic_menu_devices"
            android:title="@string/my_devices" />
        <item
            android:id="@+id/nav_my_reservations"
            android:icon="@drawable/ic_menu_reservation"
            android:title="@string/my_reservations" />
        <item
            android:id="@+id/nav_consumption_calendar"
            android:icon="@drawable/ic_menu_calendar"
            android:title="@string/consumption_calendar" />
    </group>

    <item android:title="Personnel">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_menu_profile"
                android:title="@string/my_profile" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu> 